--- a/hw_3.ipynb
+++ b/hw_3.ipynb
@@ -26,6 +26,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**User-User** - сходство между пользователями, на основе рейтингов, которые эти пользователи дают.\n",
+    "\n",
+    "**Item-Item** - рекомендация похожих товаров, на основе тех, которые пользователь уже оценил. Товары похожи, если они получают одинаковые оценки у одних и тех же пользователей.\n",
+    "\n",
+    "Оба подхода имеют следующие слабые места: холодный старт - низкое качество предсказаний для новых или нетипичных пользователей или товаров, большая сложность, а значит низкая скорость работы.\n",
+    "\n",
+    "Оба подхода основаны на заполнении пропусков в матрице пользователи-товары, различие в том, как применять методы заполнения пропусков - в исходной или транспонированной матрице. Соответсвенно функцию item_item_rec можно использовать для user_user_rec.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Приведите 3 примера весов (те, которых не было на вебинаре: сумма покупок, количество покупок - неинтересно) user-item матрицы для задачи рекомендаций товаров \n"
    ]
   },
