--- a/hw_3.ipynb
+++ b/hw_3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Прошу дать еще немного времени на выполнение задания"
+    "Прошу дать еще немного времени на выполнение задания, т.к. задания очень сложные, приходится искать и читать множество дополнительных материалов, чтобы хоть немного разобраться."
    ]
   },
   {
@@ -33,7 +33,8 @@
     "Оба подхода имеют следующие слабые места: холодный старт - низкое качество предсказаний для новых или нетипичных пользователей или товаров, большая сложность, а значит низкая скорость работы.\n",
     "\n",
     "Оба подхода основаны на заполнении пропусков в матрице пользователи-товары, различие в том, как применять методы заполнения пропусков - в исходной или транспонированной матрице. Соответсвенно функцию item_item_rec можно использовать для user_user_rec.\n",
-    "\n"
+    "\n",
+    "**Alternating Least Squares** позволяет обнаружить скрытые признаки товаров или интересы пользователей, обладает высокой скоростью работы,    "
    ]
   },
   {
@@ -41,6 +42,14 @@
    "metadata": {},
    "source": [
     "2. Приведите 3 примера весов (те, которых не было на вебинаре: сумма покупок, количество покупок - неинтересно) user-item матрицы для задачи рекомендаций товаров \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Время, проведенное пользователем на странице товара (количество кликов на странице товара - изучил ли характеристики/отзывы/фотографии);\n",
+    "- Количество покупок конкретного товара относительно покупок товаров в данной категории;\n"
    ]
   },
   {
